feat(api): add getOpaqueManagementData AMT endpoint
