# src/routes/amt/index.ts
@@ -40,6 +40,7 @@ import { getScreenSettingData } from './kvm/get.js'
 import { setKVMRedirectionSettingData } from './kvm/set.js'
 import { setLinkPreference } from './setLinkPreference.js'
 import { linkPreferenceValidator } from './linkPreferenceValidator.js'
+import { getOpaqueManagementData } from './getOpaqueManagementData.js'
 
 const amtRouter: Router = Router()
 
@@ -47,6 +48,7 @@ amtRouter.get('/log/audit/:guid', auditLogValidator(), validateMiddleware, ciraM
 amtRouter.get('/log/event/:guid', ciraMiddleware, eventLog)
 amtRouter.get('/generalSettings/:guid', ciraMiddleware, generalSettings)
 amtRouter.get('/hardwareInfo/:guid', ciraMiddleware, hardwareInfo)
+amtRouter.get('/opaqueManagementData/:guid', ciraMiddleware, getOpaqueManagementData)
 amtRouter.post('/power/action/:guid', powerActionValidator(), validateMiddleware, ciraMiddleware, powerAction)
 amtRouter.post('/power/bootOptions/:guid', bootOptionsValidator(), validateMiddleware, ciraMiddleware, bootOptions)
 amtRouter.get('/power/capabilities/:guid', ciraMiddleware, powerCapabilities)
